--- a/DrawingApp/DrawingApp.csproj
+++ b/DrawingApp/DrawingApp.csproj
@@ -125,6 +125,12 @@
     <Compile Include="..\DrawingModel\Model.cs">
       <Link>Model.cs</Link>
     </Compile>
+    <Compile Include="..\DrawingModel\Rectangle.cs">
+      <Link>Rectangle.cs</Link>
+    </Compile>
+    <Compile Include="..\DrawingModel\Shape.cs">
+      <Link>Shape.cs</Link>
+    </Compile>
     <Compile Include="App.xaml.cs">
       <DependentUpon>App.xaml</DependentUpon>
     </Compile>
