--- a/DrawingModel/DrawingModel.csproj
+++ b/DrawingModel/DrawingModel.csproj
@@ -124,6 +124,8 @@
     <Compile Include="Line.cs" />
     <Compile Include="Model.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Rectangle.cs" />
+    <Compile Include="Shape.cs" />
     <EmbeddedResource Include="Properties\DrawingModel.rd.xml" />
   </ItemGroup>
   <ItemGroup>
